--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,6 @@ footer {
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
-
+/* uploading */
 
   
